# audi-home

./: .gitignore  ARCHITECTURE_OPEN_FINANCE.md  ARQUITETURA_ENTERPRISE.md  BLINDAGEM_ENTERPRISE.md  FRAUD_DETECTION.md  FRONTEND_VALIDATION.md  GAP_ANALYSIS.md  OPEN_FINANCE.md  OPEN_FINANCE_B2B_FLOW.md  QUICK_START_VALIDATION.md  REFATORACAO_ANTI_FRAUDE.md  REFATORACAO_CNPJWS.md  RELATORIO_FINAL.md  RODAR_NO_SUPABASE.sql  SETUP_SUPABASE.sql  SISTEMA_PRONTO.md  STATUS_ATUAL.md  VALIDACAO_COMPLETA.md  credenciais.md  docker-compose.yml  docs solicitados.md  test_live_system.py  worker.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: audit.py  budget.py  dashboard.py  open_finance.py  payments.py  pluggy_routes.py  receipts.py  reconciliation.py  statements.py
backend/app/core/: celery_app.py  config.py
backend/app/models/: schemas.py
backend/app/services/: audit_log_service.py  batch_audit_service.py  brasil_api_service.py  cnpj_service.py  fraud_detector.py  ocr_service.py  open_finance.py  pluggy_service.py  rfb_validator.py  robust_validator.py  statement_parser.py
backend/app/services/adapters/: base.py  belvo.py  pluggy.py
backend/app/services/cnpj/: base.py  cnpjws_provider.py
backend/app/tasks/: audit_tasks.py
database/: apply_migrations_direct.py  schema.sql
database/migrations/: 004_condominio_contas_bancarias.sql  005_audit_tables.sql  006_enterprise_features.sql  007_performance_indexes.sql
frontend/: index.html  package-lock.json  package.json
tests/: smoke_test_real.py  verify_full_flow.py
(+34 files in other folders)
