[project]
name = "audi-home-backend"
version = "0.1.0"
description = "Financial Audit System for Condominiums Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "supabase>=2.3.0",
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
    "open-banking-client>=0.1.0", # Hypothetical client, or we use requests
    "beautifulsoup4>=4.12.0",
    "selenium>=4.17.0",
    "webdriver-manager>=4.0.0",
    "reportlab>=4.0.0",
    "weasyprint>=60.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
